--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = themes/Apollo++
 	url = git@github.com:Eumeryx/hexo-theme-apollo
 	branch = ejs
+[submodule "source/js/waline"]
+	path = source/js/waline
+	url = git@github.com:Eumeryx/waline.git
+	branch = release
